syntax = "proto3";

package simple;

message SimpleMessage {
  string content = 1;
  int32 number = 2;
}
